<resources>
    <string name="app_name">Smart Meteo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Meteo</string>
    <string name="nav_header_subtitle">smartmeteo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sensors">Sensors</string>
    <string name="menu_info">Info</string>
    <string name="menu_sensor">Sensor</string>

    <string name="next">Next</string>
    <string name="add_sensor">Add sensor</string>
    <string name="sensor_name">Sensor name</string>
    <string name="serial_number">Serial number</string>
    <string name="add">Add</string>
    <string name="incorrect_input_values">Incorrect input values!</string>
    <string name="invalid_serial_number">Invalid serial number</string>
    <string name="confirm_delete_sensor">Are you sure you want to delete this sensor?</string>
    <string name="firebase_error">Firebase error</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="sensor_image_view_description">Sensor image</string>
    <string name="pm_unit">µg/m³</string>
    <string name="live_measurement">Live measurement</string>
    <string name="last_update">Last update:</string>
    <string name="drop_down_description">Drop down description</string>
    <string name="chart_average">Avg:</string>
    <string name="chart_max">Max:</string>
    <string name="chart_min">Min:</string>
    <string name="temp">Temperature</string>
    <string name="temp_unit">°C</string>
    <string name="humid">Humidity</string>
    <string name="humid_unit">%</string>
    <string name="pm10">PM10</string>
    <string name="pm10_unit">µg/m³</string>
    <string name="pm25">PM2.5</string>
    <string name="pm25_unit">µg/m³</string>
    <string name="app_logo">App logo</string>
    <string name="info_text">1. Connect the sensor to the power supply and internet.\n\n2. Click the button in the bottom right corner and add the sensor specifying the serial number.\n\n3. That\'s all. Now you have access to the values received by the sensor from anywhere.</string>
    <string name="info_sensor_up"><![CDATA[Our first sensor is located at the Pedagogical University of Cracow. Insert <b>%s</b> as serial number to check current values]]></string>
    <string name="sensor_name_already_exists">Sensor name already exists!</string>
</resources>
