<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.masiad.smartmeteo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_sensors_list"
        android:name="com.masiad.smartmeteo.ui.sensors_list.SensorsListFragment"
        android:label="@string/menu_sensors"
        tools:layout="@layout/fragment_sensors_list" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.masiad.smartmeteo.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>